# reqwise

./: .gitignore  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
reqwise/: cmd.py  manager.py  parse.py  requirement.py  result.py  utils.py
reqwise/common/: constants.py  utils.py
reqwise/sources/: copr.py  dnf.py  koji.py  repo.py  source.py  yum.py
scripts/: quick_install.sh
tests/: base.py
