[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = reqwise
author = Arie Bregman
author_email = bregman.arie@gmail.com
summary = Python requirements analysis for RHEL/Fedora/CentOS
version = 0.0.1
description-file = README.md
license = Apache License, Version 2.0
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    reqwise

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    reqwise=reqwise.cmd:main
